--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,15 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Smart Contracts
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+
+#Hardhat files
+cache
+artifacts
